<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.fragment.HomeFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_calculate_imc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/c_lculo_de_imc"
                android:textAllCaps="true"
                android:textColor="@color/green_500"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_logo" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_logo"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:padding="8dp"
                android:scaleType="centerInside"
                android:src="@drawable/logoimc"
                app:layout_constraintDimensionRatio="11:3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_height_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:background="@color/white"
                android:hint="@string/altura_cm"
                app:layout_constraintEnd_toStartOf="@+id/txt_weight_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_calculate_imc"
                app:startIconDrawable="@drawable/ic_height_svgrepo_com"
                app:startIconTint="@color/green_500">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_height_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_weight_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:background="@color/white"
                android:hint="@string/peso_kg"
                app:layout_constraintBottom_toBottomOf="@id/txt_height_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/txt_height_layout"
                app:layout_constraintTop_toTopOf="@id/txt_height_layout"
                app:startIconDrawable="@drawable/ic_weight_svgrepo_com"
                app:startIconTint="@color/green_500">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_weight_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_calculate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="12dp"
                android:text="@string/calcular"
                app:cornerRadius="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_weight_layout"
                app:strokeColor="@color/green_700"
                app:strokeWidth="2dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_container_information"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:elevation="4dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_container">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_title_imc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="4dp"
                android:gravity="center"
                android:text="@string/conhe_a_os_m_todos_para_calcular_a_gordura_corporal"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="visible" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_description_imc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="start"
                android:text="@string/text_description"
                android:visibility="visible" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_title_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/seu_estado_atual"
                android:textColor="#FD6A3C"
                android:textSize="24sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_imc_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="#FD6A3C"
                android:textSize="24sp"
                android:textStyle="bold"
                android:visibility="gone"
                tools:text="MAGRO" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_body_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="40dp"
                android:visibility="gone"
                tools:src="@drawable/obesidadeg3" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>